<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Speed</string>
    <string name="fond">Background</string>
    <string name="texte">Text</string>
    <string name="mode_incruste">P.i.P mode</string>
    <string name="placeholder">Lorem ipsum</string>
    <string name="no_gps_titre">GPS unavailable</string>
    <string name="no_gps">Cannot get GPS position, it may be disabled. Do you want to open your phone parameter screen to enable GPS?</string>
    <string name="ui_a_propos_icones">Icons from https://materialdesignicons.com/</string>
    <string name="ui_a_propos_code">Some code from: https://stackoverflow.com/</string>
    <string name="gps_provider_disabled">Location provider disabled, trying to use another one</string>
    <string name="advanced_parameters">Advanced parameters</string>
    <string name="gps">GPS:</string>
    <string name="min_meters_between_two_positions">Min. meters between two positions:</string>
    <string name="min_seconds_between_two_positions">Min. seconds between two positions:</string>
    <string name="gps_provider">Location provider: %s</string>
    <string name="ui_change_seulement_si_necessaire">Change only to solve problems and if you know what you are doing</string>
    <string name="uiprovider">Provider:</string>
    <string name="uiinterface">Interface:</string>
    <string name="uiRatioSpeedHeading">Speed/Heading heigth (0.1 to 0.9)</string>
    <string name="ui_vitesse_gps">Use GPS speed instead of difference between two locations</string>
    <string name="ui_cap_gps">Use GPS bearing instead of difference between two locations</string>
    <string name="_0">0</string>
    <string name="font_picker_title">Font</string>
    <string name="button_font">Font</string>
    <string name="uiLissage">Smoothing</string>
    <string name="nb_de_valeurs_pour_le_lissage_du_cap"># of seconds to smooth bearing:</string>
    <string name="formatAltitude">Alt:\n%1$dm</string>

</resources>